# rkos-archive-20231115

./: .gitignore  Cargo.toml
src/: autowork.rs  error.rs  execute.rs  logger.rs  main.rs  package_manage.rs  parser.rs  vars.rs
src/base_packages/: virtual
src/base_packages/acl/: config.json
src/base_packages/attr/: config.json
src/base_packages/autoconf/: config.json
src/base_packages/automake/: config.json
src/base_packages/bash/: config.json
src/base_packages/bc/: config.json
src/base_packages/binutils/: config.json
src/base_packages/bison/: config.json
src/base_packages/bzip2/: config.json
src/base_packages/check/: config.json
src/base_packages/coreutils/: config.json
src/base_packages/dejagnu/: config.json
src/base_packages/diffutils/: config.json
src/base_packages/e2fsprogs/: config.json
src/base_packages/elfutils/: config.json
src/base_packages/expat/: config.json
src/base_packages/expect/: config.json
src/base_packages/file/: config.json
src/base_packages/findutils/: config.json
src/base_packages/flex/: config.json
src/base_packages/gawk/: config.json
src/base_packages/gcc/: config.json
src/base_packages/gdbm/: config.json
src/base_packages/gettext/: config.json
src/base_packages/glibc/: config.json
src/base_packages/gmp/: config.json
src/base_packages/gperf/: config.json
src/base_packages/grep/: config.json
src/base_packages/groff/: config.json
src/base_packages/grub/: config.json
src/base_packages/gzip/: config.json
src/other_tools/: virtual
src/package_templete/: config_templete.json
(+66 files in other folders)
