[package]
name = "rewrite_rkos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0.1"
thiserror = "1.0.43"
dagrs = "0.1.0"
petgraph-evcxr = "0.2.0"
job_scheduler_ng = "2.0.4"
clap = "4.3.19"
tracing-subscriber = "0.3.17"
petgraph = "0.6.3"
